# api-python-base

./: .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0a75a6612aa2_create_products_table.py  0efd98896d36_create_products_table.py  2e74c19e78c1_add_phone_table_users.py  4f0139c68f58_create_users_table.py  59f59d6d3430_.py
app/: main.py
app/api/: router.py
app/api/routes/products/: product.py
app/api/routes/users/: user.py
app/core/: config.py  database.py  security.py
app/db/: session.py
app/db/model/: product_model.py  user_model.py
app/modules/health/: routes.py
app/modules/products/: model.py  repository.py  routes.py  schemas.py  service.py
app/modules/users/: model.py  repository.py  routes.py  schemas.py  service.py
app/repositories/product/: product_repository.py
app/repositories/user/: user_repository.py
app/schemas/user/: user_schema.py
app/services/product/: product_service.py
app/services/user/: user_service.py
tests/: test_health.py  test_users.py
